5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1633_2920.log
== TEST (2019-04-02 18:26:57) 
-- CODE:
gp=float(input("quantas gramas deu meu prato"))
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=int(input("quantidade de sobremesa"))
print(x,2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(x,2)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:27:00) 
-- CODE:
gp=float(input("quantas gramas deu meu prato"))
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=int(input("quantidade de sobremesa"))
print(x,2)

-- EXECUTION TIME:
0.154774
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 5, in <module>
    print(x,2)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:32:21) 
-- CODE:
gp=float(input("quantas gramas deu meu prato"))
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=int(input("quantidade de sobremesa"))
pb=bebidas*3.50
pp=kgp*26.50
ps=sobremesa*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    ps=sobremesa*3.00
NameError: name 'sobremesa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:32:22) 
-- CODE:
gp=float(input("quantas gramas deu meu prato"))
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=int(input("quantidade de sobremesa"))
pb=bebidas*3.50
pp=kgp*26.50
ps=sobremesa*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- EXECUTION TIME:
0.139306
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 7, in <module>
    ps=sobremesa*3.00
NameError: name 'sobremesa' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:32:31) 
-- CODE:
gp=float(input("quantas gramas deu meu prato"))
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=int(input("quantidade de sobremesa"))
pb=bebidas*3.50
pp=kgp*26.50
ps=sobremesa*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    ps=sobremesa*3.00
NameError: name 'sobremesa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:33:49) 
-- CODE:
gp=float(input("quantas gramas deu meu prato"))
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=int(input("quantidade de sobremesa"))
pb=bebidas*3.50
pp=kgp*26.50
ps=sobremesa*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    ps=sobremesa*3.00
NameError: name 'sobremesa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:33:58) 
-- CODE:
gp=float(input("quantas gramas deu meu prato"))
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=int(input("quantidade de sobremesa"))
pb=bebidas*3.50
pp=kgp*26.50
ps=sobremesa*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    ps=sobremesa*3.00
NameError: name 'sobremesa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:38:23) 
-- CODE:
#definimos a variavel das gramas por prato
gp=float(input("quantas gramas deu meu prato"))
#1kg=1000g
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=int(input("quantidade de sobremesa"))
#definimos a variavel dos preços
pb=bebidas*3.50
pp=kgp*26.50
ps=sobremesa*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    ps=sobremesa*3.00
NameError: name 'sobremesa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:38:24) 
-- CODE:
#definimos a variavel das gramas por prato
gp=float(input("quantas gramas deu meu prato"))
#1kg=1000g
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=int(input("quantidade de sobremesa"))
#definimos a variavel dos preços
pb=bebidas*3.50
pp=kgp*26.50
ps=sobremesa*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- EXECUTION TIME:
0.123173
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 10, in <module>
    ps=sobremesa*3.00
NameError: name 'sobremesa' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:39:29) 
-- CODE:
#definimos a variavel das gramas por prato
gp=float(input("quantas gramas deu no prato"))
#1kg=1000g
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=int(input("quantidade de sobremesa"))
#definimos a variavel dos preços
pb=bebidas*3.50
pp=kgp*26.50
ps=sobremesa*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    ps=sobremesa*3.00
NameError: name 'sobremesa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:39:30) 
-- CODE:
#definimos a variavel das gramas por prato
gp=float(input("quantas gramas deu no prato"))
#1kg=1000g
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=int(input("quantidade de sobremesa"))
#definimos a variavel dos preços
pb=bebidas*3.50
pp=kgp*26.50
ps=sobremesa*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- EXECUTION TIME:
0.174508
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 10, in <module>
    ps=sobremesa*3.00
NameError: name 'sobremesa' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:40:01) 
-- CODE:
#definimos a variavel das gramas por prato
gp=float(input("quantas gramas deu no prato"))
#1kg=1000g
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=float(input("quantidade de sobremesa"))
#definimos a variavel dos preços
pb=bebidas*3.50
pp=kgp*26.50
ps=sobremesa*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    ps=sobremesa*3.00
NameError: name 'sobremesa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:02) 
-- CODE:
#definimos a variavel das gramas por prato
gp=float(input("quantas gramas deu no prato"))
#1kg=1000g
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=float(input("quantidade de sobremesa"))
#definimos a variavel dos preços
pb=bebidas*3.50
pp=kgp*26.50
ps=sobremesa*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- EXECUTION TIME:
0.117046
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 10, in <module>
    ps=sobremesa*3.00
NameError: name 'sobremesa' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:40:27) 
-- CODE:
#definimos a variavel das gramas por prato
gp=float(input("quantas gramas deu no prato"))
#1kg=1000g
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=float(input("quantidade de sobremesa"))
#definimos a variavel dos preços
pb=bebidas*3.50
pp=kgp*26.90
ps=sobremesa*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    ps=sobremesa*3.00
NameError: name 'sobremesa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:28) 
-- CODE:
#definimos a variavel das gramas por prato
gp=float(input("quantas gramas deu no prato"))
#1kg=1000g
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=float(input("quantidade de sobremesa"))
#definimos a variavel dos preços
pb=bebidas*3.50
pp=kgp*26.90
ps=sobremesa*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- EXECUTION TIME:
0.148584
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 10, in <module>
    ps=sobremesa*3.00
NameError: name 'sobremesa' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:30) 
-- CODE:
#definimos a variavel das gramas por prato
gp=float(input("quantas gramas deu no prato"))
#1kg=1000g
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=float(input("quantidade de sobremesa"))
#definimos a variavel dos preços
pb=bebidas*3.50
pp=kgp*26.90
ps=sobremesa*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- EXECUTION TIME:
0.169679
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 10, in <module>
    ps=sobremesa*3.00
NameError: name 'sobremesa' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:32) 
-- CODE:
#definimos a variavel das gramas por prato
gp=float(input("quantas gramas deu no prato"))
#1kg=1000g
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=float(input("quantidade de sobremesa"))
#definimos a variavel dos preços
pb=bebidas*3.50
pp=kgp*26.90
ps=sobremesa*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- EXECUTION TIME:
0.266307
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 10, in <module>
    ps=sobremesa*3.00
NameError: name 'sobremesa' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:32) 
-- CODE:
#definimos a variavel das gramas por prato
gp=float(input("quantas gramas deu no prato"))
#1kg=1000g
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=float(input("quantidade de sobremesa"))
#definimos a variavel dos preços
pb=bebidas*3.50
pp=kgp*26.90
ps=sobremesa*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- EXECUTION TIME:
0.135153
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 10, in <module>
    ps=sobremesa*3.00
NameError: name 'sobremesa' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:32) 
-- CODE:
#definimos a variavel das gramas por prato
gp=float(input("quantas gramas deu no prato"))
#1kg=1000g
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=float(input("quantidade de sobremesa"))
#definimos a variavel dos preços
pb=bebidas*3.50
pp=kgp*26.90
ps=sobremesa*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- EXECUTION TIME:
0.461813
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 10, in <module>
    ps=sobremesa*3.00
NameError: name 'sobremesa' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:32) 
-- CODE:
#definimos a variavel das gramas por prato
gp=float(input("quantas gramas deu no prato"))
#1kg=1000g
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=float(input("quantidade de sobremesa"))
#definimos a variavel dos preços
pb=bebidas*3.50
pp=kgp*26.90
ps=sobremesa*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- EXECUTION TIME:
0.477432
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 10, in <module>
    ps=sobremesa*3.00
NameError: name 'sobremesa' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:32) 
-- CODE:
#definimos a variavel das gramas por prato
gp=float(input("quantas gramas deu no prato"))
#1kg=1000g
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=float(input("quantidade de sobremesa"))
#definimos a variavel dos preços
pb=bebidas*3.50
pp=kgp*26.90
ps=sobremesa*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- EXECUTION TIME:
0.366788
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 10, in <module>
    ps=sobremesa*3.00
NameError: name 'sobremesa' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:41:15) 
-- CODE:
#definimos a variavel das gramas por prato
gp=float(input("quantas gramas deu no prato"))
#1kg=1000g
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=float(input("quantidade de sobremesa"))
#definimos a variavel dos preços
pb=bebidas*3.50
pp=kgp*26.90
ps=sobremesa*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    ps=sobremesa*3.00
NameError: name 'sobremesa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:42:30) 
-- CODE:
#definimos a variavel das gramas por prato
gp=float(input("quantas gramas deu no prato"))
#1kg=1000g
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=float(input("quantidade de sobremesa"))
#definimos a variavel dos preços
pb=bebidas*3.50
pp=kgp*26.90
ps=sobremesa*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    ps=sobremesa*3.00
NameError: name 'sobremesa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:44:10) 
-- CODE:
#definimos a variavel das gramas por prato
gp=float(input("quantas gramas deu no prato"))
#1kg=1000g
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=float(input("quantidade de sobremesa"))
#definimos a variavel dos preços
pb=bebidas*3.50
pp=kgp*26.90
ps=sobremesa*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    ps=sobremesa*3.00
NameError: name 'sobremesa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:44:38) 
-- CODE:
#definimos a variavel das gramas por prato
gp=float(input("quantas gramas deu no prato"))
#1kg=1000g
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=float(input("quantidade de sobremesa"))
#definimos a variavel dos preços
pb=bebidas*3.50
pp=kgp*26.90
ps=sobremesas*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:44:39) 
-- CODE:
#definimos a variavel das gramas por prato
gp=float(input("quantas gramas deu no prato"))
#1kg=1000g
kgp= gp/1000
bebidas=float(input("quantidade de bebidas"))
sobremesas=float(input("quantidade de sobremesa"))
#definimos a variavel dos preços
pb=bebidas*3.50
pp=kgp*26.90
ps=sobremesas*3.00
pt=pb+pp+ps
PT=round(pt,2)
print(PT)

-- EXECUTION TIME:
0.157125
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24.11
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
13.96
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
9.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
